White space preservation in backticked text.  Fixes #565
git-svn-id: https://bbpress.svn.wordpress.org/trunk@667 9866e705-20ec-0310-96e7-cbb4277adcfb

--- a/bb-templates/kakumei/style.css
+++ b/bb-templates/kakumei/style.css
@@ -23,7 +23,7 @@ a:hover { color: #006400; }
 
 .alt { background: #fff; }
 
-code { font: 1.0em Monaco, 'Courier New', monospace; }
+pre, code { font: 1.0em Monaco, 'Courier New', monospace; }
 
 p { margin-bottom: 1.0em; }
 
